Fixes grid spillage and gaps

--- a/style.css
+++ b/style.css
@@ -1,20 +1,17 @@
 .container{
     display: flex;
-    height: 900px;
-    width: 1200px;
-    border: solid 1px orangered;
+    height: 500px;
+    width: 500px;
     flex-direction: column;
+    gap: 1px;
 }
 .grid-row{
     display: flex;
-    border: solid 1px purple;
-    gap: 5px;
-    flex-grow: 1;
+    gap: 1px;
+    flex: 1;
 }
 .grid-item{
     background-color: cadetblue;
-    flex-grow: 1;
     box-sizing: content-box;
-    width: 50px;
-    height: 50px;
+    flex: 1;
 }
